finished main tasks

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cSpell.ignoreWords": ["horiz", "icon", "more"]
+  "cSpell.ignoreWords": ["horiz", "icon", "more"],
+  "cSpell.words": ["decepticonsrock", "megatron"]
 }
